<resources>
    <string name="app_name">Capstone-Project</string>
    <string name="try_again">Try Again</string>
    <string name="khanakhoj">KhanaKhoj</string>
    <string name="app_desc">Lets find some place to eat!!!</string>
    <string name="search_for_restaurants">search for restaurants</string>
    <string name="location_error_message">Unable to find location</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="tab_title_nearby">Nearby</string>
    <string name="tab_title_bookmarked">Bookmarked</string>
    <string name="internetErrorTitle">No Internet</string>
    <string name="internetErrorMsg">Please check network connectivity and try again</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="something_went_wrong">Something went wrong</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="bookmarked">Bookmarked</string>
    <string name="bookmark">Bookmark</string>
    <string name="cuisines">CUISINES</string>
    <string name="average_cost">AVERAGE COST</string>
    <string name="average_cost_for_two">%1$s %2$d for two (approx.)</string>
    <string name="people_voted">%1$d people rated</string>
    <string name="more_info">MORE INFO</string>
    <string name="online_delivery_available">Online delivery available</string>
    <string name="online_delivery_not_available">Online delivery not available</string>
    <string name="table_booking_available">Table booking available</string>
    <string name="table_booking_not_available">Table booking not available</string>
    <string name="address">ADDRESS</string>
    <string name="show_in_maps">Show in maps</string>

    <string name="content_authority">com.ram.capstone.capstone_project</string>

    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="no_restaurants_bookmarked">No restaurants bookmarked</string>
    <string name="desc_app_toolbar_khanakhoj">App toolbar - Khanakhoj</string>
    <string name="desc_restaurant_thumb">Restaurant thumb</string>
    <string name="desc_ads_by_google">Ads by google</string>
    <string name="desc_restaurant_featured_image">Restaurant featured Image</string>
    <string name="desc_search_icon">Search icon</string>
    <string name="desc_clear_search">Clear search</string>
</resources>
