<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/search_view"
    android:layout_width="match_parent"
    android:layout_height="44dp"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    android:elevation="48dp">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/search_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:contentDescription="@string/desc_search_icon"
            android:src="@drawable/ic_search"/>

        <EditText
            android:id="@+id/edit_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/search_for_restaurants"
            android:textColorHint="#E0E0E0"
            android:inputType="textAutoComplete"/>

        <ImageView
            android:id="@+id/clearSearchText"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:contentDescription="@string/desc_clear_search"
            android:padding="8dp"
            android:src="@drawable/ic_cancel"
            android:visibility="invisible"/>

    </android.support.v7.widget.Toolbar>

</android.support.v7.widget.CardView>