<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:background="@drawable/background"
    tools:context="com.ram.capstone.capstone_project.fragments.RestaurantListFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:orientation="vertical">

        <include layout="@layout/search_bar" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/restaurantGrid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbarThumbVertical="@null"
            android:scrollbars="none"
            tools:listitem="@layout/restaurant_list_item" />

        <ProgressBar
            android:id="@+id/loadingIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/somethingWentWrong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/something_went_wrong"
            android:textSize="16sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/retryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:background="@drawable/rounded_button_white_bg"
            android:drawableLeft="@drawable/ic_retry"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_retry"
            android:gravity="center"
            android:paddingBottom="12dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="12dp"
            android:text="@string/try_again"
            android:contentDescription="@string/try_again"
            android:textColor="@color/button_text"
            android:textSize="14sp"
            android:textStyle="normal"
            android:visibility="gone" />
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        ads:adSize="BANNER"
        android:contentDescription="@string/desc_ads_by_google"
        ads:adUnitId="@string/banner_ad_unit_id"/>

</FrameLayout>
