<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_splash_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ram.capstone.capstone_project.activities.SplashScreenActivity"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/appName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/khanakhoj"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:typeface="normal"/>

    <TextView
        android:id="@+id/appDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appName"
        android:text="@string/app_desc"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:textSize="20sp"
        android:typeface="normal"/>

    <Button
        android:id="@+id/retryButton"
        android:layout_below="@id/appDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_button_white_bg"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/ic_retry"
        android:drawableLeft="@drawable/ic_retry"
        android:gravity="center"
        android:paddingBottom="12dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="12dp"
        android:text="@string/try_again"
        android:textColor="@color/button_text"
        android:textSize="14sp"
        android:textStyle="normal"
        android:visibility="gone"/>
</RelativeLayout>
